--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@ifit/fleece": "^2.1.1",
     "inversify": "^5.0.1",
     "mongoose": "^5.6.4",
+    "node": "^12.10.0",
+    "ts-node": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "@types/mongoose": "^5.5.8",
     "@types/node": "^12.6.4",
     "jest": "^24.8.0",
+    "reflect-metadata": "^0.1.13",
     "serverless": "^1.47.0",
     "serverless-offline": "^5.7.3",
     "ts-jest": "^24.0.2",
