--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^24.0.18",
     "@types/mongoose": "^5.5.8",
     "@types/node": "^12.7.5",
+    "@types/reflect-metadata": "^0.1.0",
     "jest": "^24.9.0",
     "reflect-metadata": "^0.1.13",
     "serverless": "^1.47.0",
