--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "rpg-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mrjpierce/rpg-api.git"
@@ -16,13 +12,58 @@
     "url": "https://github.com/mrjpierce/rpg-api/issues"
   },
   "homepage": "https://github.com/mrjpierce/rpg-api#readme",
+  "main": "index.js",
+  "scripts": {
+    "build": "yarn clean && tsc -p .",
+    "clean": "npx rimraf out coverage",
+    "coverage": "yarn test && open coverage/lcov-report/index.html",
+    "deploy": "serverless deploy",
+    "format": "yarn prettier && yarn lint",
+    "lint": "tslint --fix -c tslint.json -p .",
+    "lint:ci": "tslint -c tslint.json -p .",
+    "prettier": "prettier --write \"./**/*.ts\" \"*.json\"",
+    "start": "yarn build && sls offline --stage local --prefix=rpg-api",
+    "swagger-editor": "swagger-editor-live swagger.yaml",
+    "tdd": "jest --watch",
+    "test": "jest --coverage",
+    "test:ci": "yarn build && jest out/**/*.test.js",
+    "validate": "yarn lint:ci && yarn test:ci",
+    "watch": "yarn clean; tsc -p . -w"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write",
+      "yarn lint",
+      "git add"
+    ],
+    "src/**/*.json": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@ifit/conventional-commit"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "release": {
+    "extends": "@ifit/semantic-release-config"
+  },
+  "hammer": {},
   "dependencies": {
-    "@ifit/fleece": "^2.1.1",
+    "@ifit/fleece": "^2.3.0",
+    "@ifit/janus": "^4.0.2",
+    "@ifit/llama": "^1.3.0",
+    "auto-bind": "^2.1.1",
     "inversify": "^5.0.1",
-    "mongoose": "^5.6.4",
-    "node": "^12.10.0",
-    "ts-node": "^8.4.1",
-    "tsconfig-paths": "^3.9.0"
+    "joi": "^14.3.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
@@ -30,11 +71,14 @@
     "@types/node": "^12.7.5",
     "@types/reflect-metadata": "^0.1.0",
     "jest": "^24.9.0",
+    "joi": "^14.3.1",
     "reflect-metadata": "^0.1.13",
     "serverless": "^1.47.0",
     "serverless-offline": "^5.7.3",
     "ts-jest": "^24.1.0",
     "tslint": "^5.18.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "source-map-support": "^0.5.13"
   }
+
 }
