--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@ifit/fleece": "^2.3.0",
     "@ifit/janus": "^4.0.2",
     "@ifit/llama": "^1.3.0",
+    "@ifit/ts-config": "^2.2.0",
     "auto-bind": "^2.1.1",
     "inversify": "^5.0.1",
     "joi": "^14.3.1",
@@ -75,10 +76,9 @@
     "reflect-metadata": "^0.1.13",
     "serverless": "^1.47.0",
     "serverless-offline": "^5.7.3",
+    "source-map-support": "^0.5.13",
     "ts-jest": "^24.1.0",
     "tslint": "^5.18.0",
-    "typescript": "^3.6.3",
-    "source-map-support": "^0.5.13"
+    "typescript": "^3.6.3"
   }
-
 }
