--- a/serverless.yml
+++ b/serverless.yml
@@ -34,6 +34,16 @@ functions:
             parameters:
               paths:
                 id: true
+  put-move-player:
+    handler: out/index.putMovePlayerLambda
+    events:
+      - http:
+          path: /game/player/move/{gameId}/{playerId}
+          method: put
+          request:
+            parameters:
+              paths:
+                id: true
 plugins:
   - serverless-offline
   - '@ifit/blab'
