--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "auto-bind": "^2.1.1",
     "inversify": "^5.0.1",
     "joi": "^14.3.1",
+    "mocha": "^6.2.2",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
