--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "inversify": "^5.0.1",
     "joi": "^14.3.1",
     "mocha": "^6.2.2",
+    "nodemon": "^2.0.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
