--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^24.9.0",
     "joi": "^14.3.1",
+    "mongodb-memory-server": "^6.0.2",
     "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
     "serverless": "^1.47.0",
