--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nodemon": "^2.0.1"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "@types/jest": "^24.0.25",
     "@types/mongoose": "^5.5.34",
     "@types/node": "^12.7.5",
