feat: added game and board models with do and dao

--- a/serverless.yml
+++ b/serverless.yml
@@ -51,6 +51,20 @@ functions:
           path: /unit/player
           method: post
           cors: true
+  post-create-board:
+    handler: out/index.postBoardLambda
+    events:
+      - http:
+          path: /board
+          method: post
+          cors: true
+  post-create-game:
+    handler: out/index.postGameLambda
+    events:
+      - http:
+          path: /game
+          method: post
+          cors: true
 plugins:
   - serverless-offline
   - '@ifit/blab'
